# Tauri-Tidal

./: .gitignore  README.md  components.json  index.html  package.json  vite.config.ts
docs/: ARCHITECTURE.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  error.rs  events.rs  lib.rs  main.rs
src-tauri/src/api/: albums.rs  artists.rs  auth.rs  client.rs  mod.rs  models.rs  playlists.rs  search.rs  tracks.rs  user.rs
src-tauri/src/audio/: decoder.rs  mod.rs  player.rs  preloader.rs  queue.rs  stream_source.rs
src-tauri/src/commands/: auth_commands.rs  browse_commands.rs  favorites_commands.rs  image_commands.rs  mod.rs  playback_commands.rs  playlist_commands.rs  queue_commands.rs  search_commands.rs
src-tauri/src/macos/: media_keys.rs  mod.rs  now_playing.rs
src/components/cards/: AlbumCard.tsx  ArtistCard.tsx  PlaylistCard.tsx
src/components/layout/: AppLayout.tsx  Sidebar.tsx
src/components/player/: FooterPlayer.tsx  FullPagePlayer.tsx  PlayerControls.tsx  ProgressBar.tsx  TrackInfo.tsx  (+1 more)
src/hooks/: useAnimatedProgress.ts  useAuth.ts  useKeyboardShortcuts.ts  useLibrary.ts  usePlayback.ts  useSearch.ts
src/lib/: constants.ts  tauri.ts  utils.ts
src/pages/: AlbumPage.tsx  ArtistPage.tsx  FavoritesPage.tsx  LibraryPage.tsx  PlaylistPage.tsx  QueuePage.tsx  SearchPage.tsx  SimilarTracksPage.tsx
src/stores/: authStore.ts  libraryStore.ts  playerStore.ts  queueStore.ts  searchStore.ts  uiStore.ts
src/types/: api.ts  events.ts  player.ts  search.ts  track.ts
(+6 files in other folders)
