[package]
name = "mactidalplayer"
version = "0.1.0"
description = "A macOS Tidal music player"
authors = ["you"]
edition = "2021"

[lib]
name = "mactidalplayer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }

# Audio decoding
symphonia = { version = "0.5", features = ["all"] }

# Audio output
cpal = "0.15"

# macOS native integration
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-media-player = "0.3"
block2 = "0.6"
dispatch = "0.2"

# Utilities
base64 = "0.22"
url = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
thiserror = "2"
futures-util = "0.3"
log = "0.4"
env_logger = "0.11"
dirs = "6"
sha2 = "0.10"
urlencoding = "2"
